--- a/app/src/main/res/layout/actualizar_usuario.xml
+++ b/app/src/main/res/layout/actualizar_usuario.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.926" />
 
     <Button
-        android:id="@+id/consultarCuentabtn"
+        android:id="@+id/crearCuentabtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Actualizar"
