--- a/app/src/main/res/layout/consultar_usuario.xml
+++ b/app/src/main/res/layout/consultar_usuario.xml
@@ -32,7 +32,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/consultarCuentabtn"
+        android:id="@+id/crearCuentabtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/consultar"
