--- a/app/src/main/res/layout/eliminar_usuario.xml
+++ b/app/src/main/res/layout/eliminar_usuario.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="52dp">
 
     <Button
-        android:id="@+id/consultarCuentabtn"
+        android:id="@+id/crearCuentabtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eliminar"
