--- a/app/src/main/res/layout/consultar_usuario.xml
+++ b/app/src/main/res/layout/consultar_usuario.xml
@@ -32,7 +32,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/crearCuentabtn"
+        android:id="@+id/btnConsultar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/consultar"
@@ -181,7 +181,7 @@
         app:layout_constraintVertical_bias="0.582" />
 
     <Button
-        android:id="@+id/limpiarbtn"
+        android:id="@+id/btnCancelarC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LIMPIAR"
