--- a/app/src/main/res/layout/eliminar_usuario.xml
+++ b/app/src/main/res/layout/eliminar_usuario.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="52dp">
 
     <Button
-        android:id="@+id/crearCuentabtn"
+        android:id="@+id/btnEliminar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eliminar"
@@ -57,7 +57,7 @@
         app:layout_constraintVertical_bias="0.837" />
 
     <TextView
-        android:id="@+id/consultarUserlbl"
+        android:id="@+id/btnCancelarE"
         android:layout_width="132dp"
         android:layout_height="23dp"
         android:text="ELIMINAR USUARIO"
