--- a/app/src/main/res/layout/consultar_materia.xml
+++ b/app/src/main/res/layout/consultar_materia.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/limpiarbtn3"
+        android:id="@+id/btnCancelarCM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LIMPIAR"
@@ -129,7 +129,7 @@
         app:layout_constraintVertical_bias="0.068" />
 
     <Button
-        android:id="@+id/conMatbtn"
+        android:id="@+id/btnConsultarM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CONSULTAR"
