--- a/app/src/main/res/layout/eliminar_materia.xml
+++ b/app/src/main/res/layout/eliminar_materia.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/limpiarbtn3"
+        android:id="@+id/btnCancelarEM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LIMPIAR"
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.068" />
 
     <Button
-        android:id="@+id/conMatbtn"
+        android:id="@+id/btnEliminarM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ELIMINAR"
