--- a/app/src/main/res/layout/consultar_usuario.xml
+++ b/app/src/main/res/layout/consultar_usuario.xml
@@ -19,13 +19,13 @@
         app:layout_constraintVertical_bias="0.753">
 
         <RadioButton
-            android:id="@+id/docentebtn"
+            android:id="@+id/rbDocente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/docente" />
 
         <RadioButton
-            android:id="@+id/estudiantebtn"
+            android:id="@+id/rbEstudiante"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/estudiante" />
