--- a/app/src/main/res/layout/crear_encuesta.xml
+++ b/app/src/main/res/layout/crear_encuesta.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/naranja"
-        android:text="@string/guardar"
+        android:text="SIGUIENTE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.218"
@@ -88,8 +88,8 @@
 
     <EditText
         android:id="@+id/txtFechaC"
-        android:layout_width="198dp"
-        android:layout_height="42dp"
+        android:layout_width="195dp"
+        android:layout_height="44dp"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintBottom_toBottomOf="parent"
