--- a/app/src/main/res/layout/pantalla_bienvenida.xml
+++ b/app/src/main/res/layout/pantalla_bienvenida.xml
@@ -35,6 +35,7 @@
         android:id="@+id/btnCrearC"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:background="@color/naranja"
         android:text="Crear Cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +48,7 @@
         android:id="@+id/btnIngresarSC"
         android:layout_width="150dp"
         android:layout_height="80dp"
+        android:background="@color/naranja"
         android:text="Ingresar sin Cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +61,7 @@
         android:id="@+id/btnLogin"
         android:layout_width="150dp"
         android:layout_height="50dp"
+        android:background="@color/naranja"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
