--- a/app/src/main/res/layout/preguntas_res_corta.xml
+++ b/app/src/main/res/layout/preguntas_res_corta.xml
@@ -52,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
+        android:background="@color/naranja"
         android:text="SIGUIENTE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
