--- a/app/src/main/res/layout/consultar_usuario.xml
+++ b/app/src/main/res/layout/consultar_usuario.xml
@@ -35,6 +35,7 @@
         android:id="@+id/btnConsultar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="@string/consultar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -184,6 +185,7 @@
         android:id="@+id/btnCancelarC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="LIMPIAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
