--- a/app/src/main/res/layout/crear_materia.xml
+++ b/app/src/main/res/layout/crear_materia.xml
@@ -9,6 +9,7 @@
         android:id="@+id/btnCancelarCM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="LIMPIAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +135,7 @@
         android:id="@+id/btnCrearM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="crear materia"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
