--- a/app/src/main/res/layout/eliminar_encuesta.xml
+++ b/app/src/main/res/layout/eliminar_encuesta.xml
@@ -9,6 +9,7 @@
         android:id="@+id/limpiarbtn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="LIMPIAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +35,7 @@
         android:id="@+id/conMatbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="ELIMINAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
