--- a/app/src/main/res/layout/eliminar_materia.xml
+++ b/app/src/main/res/layout/eliminar_materia.xml
@@ -9,6 +9,7 @@
         android:id="@+id/btnCancelarEM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="LIMPIAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,6 +60,7 @@
         android:id="@+id/btnEliminarM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="ELIMINAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
