--- a/app/src/main/res/layout/eliminar_usuario.xml
+++ b/app/src/main/res/layout/eliminar_usuario.xml
@@ -11,6 +11,7 @@
         android:id="@+id/btnEliminar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="@string/eliminar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +49,7 @@
         android:id="@+id/limpiarbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="LIMPIAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
