--- a/app/src/main/res/layout/actualizar_materia.xml
+++ b/app/src/main/res/layout/actualizar_materia.xml
@@ -9,6 +9,7 @@
         android:id="@+id/btnCancelarAM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="LIMPIAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,6 +134,7 @@
         android:id="@+id/btnActualizarM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="ACTUALIZAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
