--- a/app/src/main/res/layout/encuesta_lista.xml
+++ b/app/src/main/res/layout/encuesta_lista.xml
@@ -32,6 +32,7 @@
         android:id="@+id/responderbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/naranja"
         android:text="RESPONDER ENCUESTA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
