--- a/app/src/main/res/layout/preguntas_res_corta.xml
+++ b/app/src/main/res/layout/preguntas_res_corta.xml
@@ -26,10 +26,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPreguntaC" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtPreguntaC"
         android:layout_width="325dp"
         android:layout_height="152dp"
         android:text="TextView"
