--- a/app/src/main/res/layout/preguntas_vyf.xml
+++ b/app/src/main/res/layout/preguntas_vyf.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/preguntaVyF"
+        android:id="@+id/txtPregunta"
         android:layout_width="330dp"
         android:layout_height="156dp"
         android:layout_marginTop="20dp"
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/preguntaVyF"
+        app:layout_constraintTop_toBottomOf="@+id/txtPregunta"
         app:layout_constraintVertical_bias="0.095">
 
         <RadioButton
@@ -55,10 +55,10 @@
         android:id="@+id/cuestionarioSiguientebtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="220dp"
         android:text="Siguiente"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="452dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
