--- a/app/src/main/res/layout/agregar_preguntas_vyf.xml
+++ b/app/src/main/res/layout/agregar_preguntas_vyf.xml
@@ -41,7 +41,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/cuestionarioSiguientebtn"
+        android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/naranja"
