--- a/app/src/main/res/layout/agregar_pregunta_res_corta.xml
+++ b/app/src/main/res/layout/agregar_pregunta_res_corta.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/nomCuestilbl"
+        android:id="@+id/lblNombreEnc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="nombre del cuestionario"
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.04" />
 
     <EditText
-        android:id="@+id/resCortatxt"
+        android:id="@+id/txtPreguntaCort"
         android:layout_width="301dp"
         android:layout_height="55dp"
         android:ems="10"
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.717" />
 
     <Button
-        android:id="@+id/guardarPreguntas"
+        android:id="@+id/btnsave"
         android:layout_width="111dp"
         android:layout_height="47dp"
         android:background="@color/naranja"
@@ -67,7 +67,7 @@
         app:layout_constraintVertical_bias="0.828" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/lblNumeroPreg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
