--- a/app/src/main/res/layout/eliminar_encuesta.xml
+++ b/app/src/main/res/layout/eliminar_encuesta.xml
@@ -32,7 +32,7 @@
         app:layout_constraintVertical_bias="0.068" />
 
     <Button
-        android:id="@+id/conMatbtn"
+        android:id="@+id/eliminarEncbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/naranja"
