--- a/app/src/main/res/layout/preguntas_vyf.xml
+++ b/app/src/main/res/layout/preguntas_vyf.xml
@@ -5,6 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/escucharbtn2"
+        android:layout_width="202dp"
+        android:layout_height="37dp"
+        android:background="@color/naranja"
+        android:text="ESCUCHAR PREGUNTA"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.396" />
+
     <TextView
         android:id="@+id/nomCuestionario"
         android:layout_width="wrap_content"
@@ -35,9 +48,10 @@
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.47">
+        app:layout_constraintVertical_bias="0.543">
 
         <RadioButton
             android:id="@+id/rdVerdadero"
